# SoftwareFactory

./: CMakeLists.txt  LICENSE  README.md  deps.cmake
.github/workflows/: cmake.yml
3rd/glew-cmake-2.2.0/: CMakeLists.txt
3rd/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h
cmake/: Findimgui.cmake
com/base/: CMakeLists.txt  bpbase.cpp  bpbase.hpp
com/math/: CMakeLists.txt  bpmath.cpp  bpmath.hpp
common/: CMakeLists.txt  bpcommon.cpp  bpcommon.hpp  bpflags.cpp  bpflags.hpp
common/bplog/: CMakeLists.txt  bplog.cpp  bplog.hpp  bplogger.cpp  bplogger.hpp
common/test/: bpcommon_test.cpp
conf/: CMakeLists.txt  bpbase.json  bpmath.json  com_random.json
core/: Bp.cpp  Bp.hpp  BpContents.hpp  BpGraph.cpp  BpGraph.hpp  BpGraphModLib.hpp  BpLib.cpp  BpLib.hpp  BpLibLinux.cpp  BpLibLinux.hpp  BpLink.hpp  BpModLib.hpp  BpModLibLinux.cpp  BpModLibLinux.hpp  BpModule.cpp  BpModule.hpp  BpModuleLinux.cpp  BpModuleLinux.hpp  BpNode.cpp  BpNode.hpp  BpNodeFunc.cpp  BpNodeFunc.hpp  BpNodeLib.cpp  BpNodeLib.hpp  BpNodeNormal.cpp  BpNodeNormal.hpp  BpNodeVar.hpp  BpObj.cpp  BpObj.hpp  BpPin.cpp  BpPin.hpp  BpVariable.cpp  BpVariable.hpp  CMakeLists.txt  README.md
core/basenode/: BpBaseNodePrint.hpp  BpBaseNodeVar.hpp  BpNodeBaseBranch.hpp  BpNodeBaseDelay.hpp  BpNodeBasePrint.hpp  BpNodeBaseWhile.hpp
core/evnode/: BpEvNode.hpp  BpEvNodeTick.cpp  BpEvNodeTick.hpp  BpNodeEv.hpp  BpNodeEvBegin.hpp  BpNodeEvTick.cpp  BpNodeEvTick.hpp  README.md
core/test/: bpcore_test.cpp
core/test_data/: exec_debug.json
doc/: HOME.md  TODOLIST.md  panel_cmd.md
editor/: CMakeLists.txt  README.md  SFEPanel.cpp  SFEPanel.hpp  SFEPanelBp.cpp  SFEPanelBp.hpp  SFEPanelDragTip.cpp  SFEPanelDragTip.hpp  SFEPanelGraph.cpp  SFEPanelGraph.hpp  SFEPanelLib.cpp  SFEPanelLib.hpp  SFEPanelLog.cpp  SFEPanelLog.hpp  SFEPanelMainMenu.cpp  SFEPanelMainMenu.hpp  SFEPanelPlot.cpp  SFEPanelPlot.hpp  SFEPanelUINodes.cpp  SFEPanelUINodes.hpp  SFEParams.cpp  SFEParams.hpp  SFEPlug.cpp  SFEPlug.hpp  SFEPlugLib.hpp  SFERateCtrl.hpp  SFETimeRecorder.hpp  SFEditor.cpp  SFEditor.hpp  main.cpp
editor/imgui-node-editor/: Builders.cpp  CMakeLists.txt  Drawing.cpp  Interop.h  Math2D.inl  Widgets.cpp  imgui_canvas.cpp  imgui_node_editor.h  imgui_node_editor.natvis  imgui_node_editor_internal.h
editor/imgui-node-editor/ax/: Builders.h  Drawing.h  Math2D.h  Widgets.h
editor/nativefiledialog/: CMakeLists.txt
editor/test/: sfeparams_test.cpp
editor/ui_node/: SFEUINodePlot.hpp  SFEUINodePrint.hpp
params/: imgui.ini  sfe.json
proto/: CMakeLists.txt  bpbase.proto  bpmath.proto
proto/pb2/: bpbase.proto  bpmath.proto
templates/: CMakeLists.txt  TemplateFlags.cpp  TemplateFlags.hpp  main.cpp
templates/base_mod/: CMakeLists.txt
templates/base_mod/com/: template_mod.cpp  template_mod.hpp
templates/base_mod/conf/: template_mod.json
templates/base_mod_with_ui/: CMakeLists.txt
templates/base_mod_with_ui/com/: template_mod_with_ui.cpp
templates/base_mod_with_ui/conf/: template_mod_with_ui.json
templates/base_panel/: CMakeLists.txt  template_panel.cpp  template_panel.json
tools/: gen_base_mod_proj.py
