CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SoftwareFactory)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_FLGAS "-fPIC")
SET(CMAKE_CXX_FLGAS "-fPIC")

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
SET(CMAKE_INSTALL_PREFIX "/")
SET(ITOOLS_OUTPUT_ASSETS_DIR ${CMAKE_BINARY_DIR}/output/assets)
SET(ITOOLS_OUTPUT_CONF_DIR ${CMAKE_BINARY_DIR}/output/conf)
SET(ITOOLS_INSTALL_ASSETS_DIR usr/local/${CMAKE_PROJECT_NAME}/assets)
SET(ITOOLS_INSTALL_CONF_DIR usr/local/${CMAKE_PROJECT_NAME}/conf)
SET(ITOOLS_INSTALL_LIB_DIR usr/local/${CMAKE_PROJECT_NAME}/lib)
SET(ITOOLS_INSTALL_BIN_DIR usr/local/${CMAKE_PROJECT_NAME}/bin)
SET(ITOOLS_INSTALL_INC_DIR usr/local/${CMAKE_PROJECT_NAME}/inc)

FIND_PACKAGE(jsoncpp REQUIRED)
FIND_PACKAGE(gflags REQUIRED)
FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/core)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/proto)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)

LINK_LIBRARIES(glog gflags jsoncpp dl pthread protobuf)

ADD_SUBDIRECTORY(conf)
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(com/base)
ADD_SUBDIRECTORY(com/math)
ADD_SUBDIRECTORY(templates)

# editor
ADD_SUBDIRECTORY(3rd/glew-cmake-2.2.0)
ADD_SUBDIRECTORY(3rd/imgui)
ADD_SUBDIRECTORY(editor)