CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SoftwareFactory)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_FLGAS "-fPIC -DPIC")
SET(CMAKE_CXX_FLGAS "-fPIC -DPIC")

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
SET(CMAKE_INSTALL_PREFIX "/")
SET(SF_OUTPUT_ASSETS_DIR ${CMAKE_BINARY_DIR}/output/assets)
SET(SF_OUTPUT_CONF_DIR ${CMAKE_BINARY_DIR}/output/conf)
SET(SF_INSTALL_ROOT opt/${CMAKE_PROJECT_NAME})
SET(SF_INSTALL_ASSETS_DIR ${SF_INSTALL_ROOT}/assets)
SET(SF_INSTALL_CONF_DIR ${SF_INSTALL_ROOT}/conf)
SET(SF_INSTALL_LIB_DIR ${SF_INSTALL_ROOT}/lib)
SET(SF_INSTALL_BIN_DIR ${SF_INSTALL_ROOT}/bin)
SET(SF_INSTALL_INC_DIR ${SF_INSTALL_ROOT}/inc)
SET(SF_INSTALL_TEMPLATES_DIR ${SF_INSTALL_ROOT}/templates)

FIND_PACKAGE(jsoncpp REQUIRED)
FIND_PACKAGE(gflags REQUIRED)
FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/core)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/proto)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)

LINK_LIBRARIES(glog gflags jsoncpp dl pthread protobuf)

ADD_SUBDIRECTORY(conf)
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(com/base)
ADD_SUBDIRECTORY(com/math)
ADD_SUBDIRECTORY(templates)

# editor
ADD_SUBDIRECTORY(3rd/glew-cmake-2.2.0)
ADD_SUBDIRECTORY(3rd/imgui)
ADD_SUBDIRECTORY(editor)

INSTALL(DIRECTORY tools DESTINATION ${SF_INSTALL_ROOT})
INSTALL(DIRECTORY params DESTINATION ${SF_INSTALL_ROOT})
INSTALL(DIRECTORY DESTINATION ${SF_INSTALL_ROOT}/log)