CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(SoftwareFactory)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_C_FLGAS "-fPIC -DPIC")
SET(CMAKE_CXX_FLGAS "-fPIC -DPIC")

OPTION(USE_PB_VER_2 "using protobuf version 2" OFF)
OPTION(USE_SYSTEM_LIBS "using system deps lib" ON)
MESSAGE(STATUS "USE_PB_VER_2:${USE_PB_VER_2}")
MESSAGE(STATUS "USE_SYSTEM_LIBS:${USE_SYSTEM_LIBS}")

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
SET(CMAKE_INSTALL_PREFIX "/")
SET(SF_OUTPUT_ASSETS_DIR ${CMAKE_BINARY_DIR}/output/assets)
SET(SF_OUTPUT_CONF_DIR ${CMAKE_BINARY_DIR}/output/conf)
SET(SF_OUTPUT_TEST_DATA_DIR ${CMAKE_BINARY_DIR}/output/test_data)
SET(SF_INSTALL_ROOT opt/${CMAKE_PROJECT_NAME})
SET(SF_INSTALL_ASSETS_DIR ${SF_INSTALL_ROOT}/assets)
SET(SF_INSTALL_CONF_DIR ${SF_INSTALL_ROOT}/conf)
SET(SF_INSTALL_LIB_DIR ${SF_INSTALL_ROOT}/lib)
SET(SF_INSTALL_BIN_DIR ${SF_INSTALL_ROOT}/bin)
SET(SF_INSTALL_INC_DIR ${SF_INSTALL_ROOT}/inc)
SET(SF_INSTALL_TEMPLATES_DIR ${SF_INSTALL_ROOT}/templates)

INCLUDE(deps.cmake)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/core)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/proto)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)

LINK_LIBRARIES(glog gflags jsoncpp dl pthread protobuf)

ENABLE_TESTING()
ADD_SUBDIRECTORY(conf)
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(com/base)
ADD_SUBDIRECTORY(com/math)
ADD_SUBDIRECTORY(templates)

# editor
ADD_SUBDIRECTORY(3rd/imgui)
ADD_SUBDIRECTORY(editor)

INSTALL(DIRECTORY tools DESTINATION ${SF_INSTALL_ROOT})
INSTALL(DIRECTORY params DESTINATION ${SF_INSTALL_ROOT})
INSTALL(DIRECTORY DESTINATION ${SF_INSTALL_ROOT}/log)