CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB proto_files "*.proto")
PROTOBUF_GENERATE(
    APPEND_PATH
    LANGUAGE cpp
    OUT_VAR pb_gen
    PROTOC_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}
    PROTOS ${proto_files}
)
ADD_LIBRARY(bppb SHARED ${pb_gen})
TARGET_LINK_LIBRARIES(bppb protobuf)

FILE(GLOB proto_header_files "${CMAKE_CURRENT_BINARY_DIR}/*.pb.h")
INSTALL(FILES ${proto_header_files} DESTINATION ${ITOOLS_INSTALL_INC_DIR})
INSTALL(TARGETS bppb
    LIBRARY DESTINATION ${ITOOLS_INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${ITOOLS_INSTALL_LIB_DIR}
    RUNTIME DESTINATION ${ITOOLS_INSTALL_BIN_DIR}
)