CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

FILE(GLOB proto_files "*.proto")
#PROTOBUF_GENERATE(
#    APPEND_PATH
#    LANGUAGE cpp
#    OUT_VAR pb_gen
#    PROTOC_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}
#    PROTOS ${proto_files}
#)
#ADD_LIBRARY(bppb SHARED ${pb_gen})

include_directories(${Protobuf_INCLUDE_DIRS})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${proto_files})
ADD_LIBRARY(bppb SHARED ${PROTO_SRCS} ${PROTO_HDRS})
TARGET_LINK_LIBRARIES(bppb ${Protobuf_LIBRARIES})

FILE(GLOB proto_header_files "${CMAKE_CURRENT_BINARY_DIR}/*.pb.h")
INSTALL(FILES ${proto_header_files} DESTINATION ${SF_INSTALL_INC_DIR})
INSTALL(TARGETS bppb
    LIBRARY DESTINATION ${SF_INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${SF_INSTALL_LIB_DIR}
    RUNTIME DESTINATION ${SF_INSTALL_BIN_DIR}
)