CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(@template_name@)

SET(CMAKE_INSTALL_PREFIX "/")
SET(SF_ROOT /opt/SoftwareFactory/)
SET(SF_PLUG ${SF_ROOT}/plug)
SET(SF_INSTALL_ASSETS_DIR ${SF_PLUG}/assets)
SET(SF_INSTALL_CONF_DIR ${SF_PLUG}/conf)
SET(SF_INSTALL_LIB_DIR ${SF_PLUG}/lib)
SET(SF_INSTALL_BIN_DIR ${SF_PLUG}/bin)
SET(SF_INSTALL_INC_DIR ${SF_PLUG}/inc)

FIND_PACKAGE(jsoncpp REQUIRED)
FIND_PACKAGE(gflags REQUIRED)
FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(GTest REQUIRED)

FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${SF_ROOT}/inc)

LINK_DIRECTORIES(${SF_ROOT}/lib)

LINK_LIBRARIES(glog gflags jsoncpp dl pthread protobuf)

ADD_LIBRARY(${PROJECT_NAME} SHARED
    ${PROJECT_NAME}.cpp
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    SDL2
    SDL2main
    OpenGL
    GL

    bppb
    bpcore
    bpcommon

    glew
    imgui
    imgui_node_editor
    nativefiledialog
)

INSTALL(TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${SF_INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${SF_INSTALL_LIB_DIR}
    RUNTIME DESTINATION ${SF_INSTALL_BIN_DIR}
)